# bartender

./: FileClient.hs  README.md  StatusBar.hs  TestClient.hs  WatchClient.hs  bartender.cabal  bartender.hs  status-bar.cabal
BarTender/: Bar.hs  Client.hs  Message.hs  Process.hs  Server.hs
StatusBar/: Bar.hs  Client.hs  Dzen.hs  Message.hs  Options.hs  Process.hs  Request.hs  Server.hs  Timer.hs  Util.hs  Widget.hs
TestClient/: Main.hs
bartender-server/: Main.hs
clients/FileClient/: Main.hs
clients/TestClient/: Main.hs
clients/WatchClient/: Main.hs
src/BarTender/: Bar.hs  Client.hs  Dzen.hs  Message.hs  NewOptions.hs  Options.hs  Process.hs  Server.hs  Timer.hs  Util.hs  Widget.hs
