name:                bartender
version:             0.1.0.0
synopsis:            A library for a status bar server and client built around dzen2.
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Chris Bouchard
maintainer:          cbou@cs.albany.edu
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  exposed-modules:
    StatusBar.Bar,
    StatusBar.Client,
    StatusBar.Dzen,
    StatusBar.Message,
    StatusBar.Options,
    StatusBar.Process,
    StatusBar.Server,
    StatusBar.Timer,
    StatusBar.Util,
    StatusBar.Widget
  build-depends:
    base ==4.6.*,
    ConfigFile ==1.1.*,
    containers ==0.5.*,
    hslogger ==1.2.*,
    mtl ==2.1.*,
    network ==2.4.*,
    old-locale ==1.0.*,
    process ==1.1.*,
    stm ==2.4.*,
    time ==1.4.*,
    transformers ==0.3.*

executable bartender
  main-is: bartender.hs
  ghc-options: -threaded -with-rtsopts=-N
  other-modules:
    StatusBar.Bar,
    StatusBar.Client,
    StatusBar.Dzen,
    StatusBar.Message,
    StatusBar.Process,
    StatusBar.Server,
    StatusBar.Timer,
    StatusBar.Util,
    StatusBar.Widget
  build-depends:
    base ==4.6.*,
    cmdargs ==0.10.*,
    hslogger ==1.2.*,
    mtl ==2.1.*,
    network ==2.4.*,
    old-locale ==1.0.*,
    process ==1.1.*,
    stm ==2.4.*,
    time ==1.4.*,
    transformers ==0.3.*

executable TestClient
  main-is: TestClient.hs
  ghc-options: -threaded -with-rtsopts=-N
  other-modules:
    StatusBar.Bar,
    StatusBar.Client,
    StatusBar.Dzen,
    StatusBar.Message,
    StatusBar.Process,
    StatusBar.Server,
    StatusBar.Timer,
    StatusBar.Util,
    StatusBar.Widget
  build-depends:
    base ==4.6.*,
    cmdargs ==0.10.*,
    hslogger ==1.2.*,
    mtl ==2.1.*,
    network ==2.4.*,
    old-locale ==1.0.*,
    process ==1.1.*,
    stm ==2.4.*,
    time ==1.4.*,
    transformers ==0.3.*

executable FileClient
  main-is: FileClient.hs
  ghc-options: -threaded -with-rtsopts=-N
  other-modules:
    StatusBar.Bar,
    StatusBar.Client,
    StatusBar.Dzen,
    StatusBar.Message,
    StatusBar.Process,
    StatusBar.Server,
    StatusBar.Timer,
    StatusBar.Util,
    StatusBar.Widget
  build-depends:
    base ==4.6.*,
    cmdargs ==0.10.*,
    hslogger ==1.2.*,
    mtl ==2.1.*,
    network ==2.4.*,
    old-locale ==1.0.*,
    process ==1.1.*,
    stm ==2.4.*,
    time ==1.4.*,
    transformers ==0.3.*

executable WatchClient
  main-is: WatchClient.hs
  ghc-options: -threaded -with-rtsopts=-N
  other-modules:
    StatusBar.Bar,
    StatusBar.Client,
    StatusBar.Dzen,
    StatusBar.Message,
    StatusBar.Process,
    StatusBar.Server,
    StatusBar.Timer,
    StatusBar.Util,
    StatusBar.Widget
  build-depends:
    base ==4.6.*,
    cmdargs ==0.10.*,
    hslogger ==1.2.*,
    mtl ==2.1.*,
    network ==2.4.*,
    old-locale ==1.0.*,
    process ==1.1.*,
    stm ==2.4.*,
    time ==1.4.*,
    transformers ==0.3.*

