name:                bartender
version:             0.1.0.0
synopsis:            A library for a status bar server and client built around dzen2.
-- description:         
license:             GPL-3
license-file:        LICENSE
author:              Chris Bouchard
maintainer:          cbou@cs.albany.edu
-- copyright:           
-- category:            
build-type:          Simple
cabal-version:       >=1.8

library
  hs-source-dirs: src
  extensions:
    DeriveFunctor,
    ScopedTypeVariables,
    TemplateHaskell
  exposed-modules:
    BarTender.Bar,
    BarTender.Client,
    BarTender.Dzen,
    BarTender.Message,
    BarTender.NewOptions,
    BarTender.Options,
    BarTender.Process,
    BarTender.Server,
    BarTender.Timer,
    BarTender.Util,
    BarTender.Widget
  build-depends:
    base ==4.6.*,
    ConfigFile ==1.1.*,
    containers ==0.5.*,
    data-lens ==2.10.*,
    data-lens-template ==2.1.*,
    hslogger ==1.2.*,
    mtl ==2.1.*,
    network ==2.4.*,
    old-locale ==1.0.*,
    parsec ==3.1.*,
    process ==1.1.*,
    stm ==2.4.*,
    time ==1.4.*,
    transformers ==0.3.*

executable bartender
  main-is: Main.hs
  hs-source-dirs: bartender-server
  ghc-options: -threaded -with-rtsopts=-N
  extensions:
    DeriveDataTypeable,
    TemplateHaskell
  build-depends:
    bartender,
    base ==4.6.*,
    cmdargs ==0.10.*,
    data-lens ==2.10.*,
    data-lens-template ==2.1.*,
    hslogger ==1.2.*

executable TestClient
  main-is: Main.hs
  hs-source-dirs: clients/TestClient
  ghc-options: -threaded -with-rtsopts=-N
  extensions:
    DeriveDataTypeable,
    TemplateHaskell
  build-depends:
    bartender,
    base ==4.6.*,
    data-lens ==2.10.*,
    data-lens-template ==2.1.*,
    hslogger ==1.2.*,
    old-locale ==1.0.*,
    time ==1.4.*,
    transformers ==0.3.*

executable FileClient
  main-is: Main.hs
  hs-source-dirs: clients/FileClient
  ghc-options: -threaded -with-rtsopts=-N
  extensions:
    DeriveDataTypeable,
    TemplateHaskell
  build-depends:
    bartender,
    base ==4.6.*,
    data-lens ==2.10.*,
    data-lens-template ==2.1.*,
    hslogger ==1.2.*,
    transformers ==0.3.*

executable WatchClient
  main-is: Main.hs
  hs-source-dirs: clients/WatchClient
  ghc-options: -threaded -with-rtsopts=-N
  extensions:
    DeriveDataTypeable,
    TemplateHaskell
  build-depends:
    bartender,
    base ==4.6.*,
    data-lens ==2.10.*,
    data-lens-template ==2.1.*,
    hslogger ==1.2.*,
    process ==1.1.*,
    transformers ==0.3.*

